--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ author: 慕容羽兮
 avatar: /images/avatar.jpg
 email: niuleipeng@gmail.com
 language: zh-Hans
-timezone: UTC+08:00
+timezone: 
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
