--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: 学而时习之
-subtitle: 程序猿,攻城狮,爱生活,爱编程。
-description: 知行合一 ｜ 编程 ｜ 记录 ｜ 随笔 ｜ Perl ｜ 前端 ｜ HTML ｜ CSS ｜ JavaScript
+subtitle: Inner Peace.
+description: 知行合一 ｜ 编程 ｜ 记录 ｜ 随笔 ｜ 前端 ｜ HTML ｜ CSS ｜ JavaScript
 author: 慕容羽兮
 avatar: /images/avatar.jpg
 email: niuleipeng@gmail.com
